syntax = "proto3";
import "google/protobuf/empty.proto";
package uz.edm.grpc.timeentry;

option java_outer_classname = "TimeEntryProto";
option java_multiple_files = true;

service TimeEntryService {
  rpc GetTimeEntryByEmployeeCode (GetTimeEntryByEmployeeCodeRequest) returns (TimeEntries);
  rpc GetAllTimeEntries (google.protobuf.Empty) returns (TimeEntries);
  rpc UpdateTimeEntry (UpdateTimeEntryRequest) returns (TimeEntry);
  rpc CreateTimeEntry (CreateTimeEntryRequest) returns (TimeEntry);
  rpc DeleteTimeEntry (DeleteTimeEntryRequest) returns (google.protobuf.Empty);
}

message GetTimeEntryByEmployeeCodeRequest {
  string employeeCode = 1;
  string start = 2;
  string stop = 3;
}

message UpdateTimeEntryRequest {
  string employeeCode = 1;
  TimeEntry timeEntry = 2;
}

message CreateTimeEntryRequest {
  TimeEntry timeEntry = 1;
}

message DeleteTimeEntryRequest {
  string id = 1;
}

message TimeEntry {
  string day = 1;
  string start = 2;
  string stop = 3;
  string employeeCode = 4;
}

message TimeEntries {
  repeated TimeEntry timeEntry = 1;
}